--- a/Calculator/app/src/main/res/layout/activity_main.xml
+++ b/Calculator/app/src/main/res/layout/activity_main.xml
@@ -12,70 +12,80 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/title"
-        android:textStyle="bold"
         android:layout_marginTop="50dp"
-        android:textSize="30sp"/>
+        android:fontFamily="monospace"
+        android:text="@string/title"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/number1"
-        android:inputType="number"
-        android:layout_marginTop="30dp"
-        android:hint="@string/Number"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:fontFamily="monospace"
+        android:hint="@string/Number"
+        android:inputType="number" />
 
     <EditText
         android:id="@+id/number2"
-        android:inputType="number"
-        android:layout_marginTop="10dp"
-        android:hint="@string/second_number"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="monospace"
+        android:hint="@string/second_number"
+        android:inputType="number" />
 
     <LinearLayout
-        android:layout_marginTop="26dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="260dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="26dp">
 
         <Button
             android:id="@+id/btn_add"
-            android:text="+"
-            android:textSize="30sp"
+            style="@style/Widget.Material3.Button.Icon"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:backgroundTint="#48C8830D"
+            android:textAlignment="center"
+            android:textSize="34sp"
+            app:icon="@drawable/baseline_add_24"
+            app:iconSize="28dp" />
+
         <Button
             android:id="@+id/btn_sub"
-            android:text="-"
-            android:textSize="30sp"
+            style="@style/Widget.Material3.Button.Icon"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:backgroundTint="#48C8830D"
+            android:textAlignment="center"
+            android:textSize="34sp"
+            app:icon="@drawable/baseline_remove_24"
+            app:iconSize="28dp" />
+
         <Button
             android:id="@+id/btn_mul"
-            android:text="x"
-            android:textSize="30sp"
+            style="@style/Widget.Material3.Button.Icon"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:backgroundTint="#48C8830D"
+            android:textSize="34sp"
+            app:icon="@drawable/baseline_fiber_manual_record_24" />
+
         <Button
             android:id="@+id/btn_div"
-            android:text="÷"
-            android:textSize="30sp"
+            style="@style/Widget.Material3.Button.Icon"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:backgroundTint="#48C8830D"
+            android:text="@string/division"
+            android:textAlignment="center"
+            android:textSize="34sp" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/answer"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
 </LinearLayout>
